# AndroidSamples

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/sliver/androidsamples/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/sliver/samples/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Bitmap.h  CMakeLists.txt  ImageDecoder.h  Logger.h  PPOCR.h  Shell.h  Util.h  image_decoder.h  paddle_ocr.h  root_shell.h  samples.cpp  simple_logger.h  spdlog_logger.h
app/src/main/java/com/sliver/androidsamples/: CustomPopupWindow.kt  GravityAdapter.kt  MainActivity.kt  SimpleSeekBarChangeListener.kt  TestPopupWindow.kt
app/src/main/java/com/sliver/androidsamples/popup/: BasePopupWindow.kt  CustomPopupWindow.kt  PopupWindowLocator.kt  PopupWindowLocator2.kt
app/src/main/java/com/sliver/samples/: AppController.kt  GravityAdapter.kt  MainActivity.kt  SimpleSeekBarChangeListener.kt  TestPopupWindow.kt
app/src/main/java/com/sliver/samples/base/: BaseActivity.kt  BaseFragment.kt
app/src/main/java/com/sliver/samples/command/: CommandExecutor.kt  CommandOutputs.kt  CommandProcess.kt
app/src/main/java/com/sliver/samples/custom/: BlurKit.kt  CustomBlurView.kt  CustomBubbleTextView.java  CustomShadowLayout.kt  FriendListAdapter.kt  ShadowLayout.kt  ShadowTextView.kt  SlideMenuItemView.kt  SlidingButtonView.kt
app/src/main/java/com/sliver/samples/dialog/: DialogSampleActivity.kt  TestDialog.kt
app/src/main/java/com/sliver/samples/dialog/core/: CustomDialog.kt  ViewBinding.kt
app/src/main/java/com/sliver/samples/dialogwindow/: DialogSampleActivity.kt  TestDialog.kt
app/src/main/java/com/sliver/samples/dialogwindow/core/: BaseDialog.kt  CustomDialog.kt  ViewBinding.kt  ViewBindingWrapper.kt
app/src/main/java/com/sliver/samples/floatingwindow/: CommandExecutor.kt  CommandOutputs.kt  CommandProcess.kt  FloatingWindowSampleActivity.kt  ScreenCapturer.kt  TestFloatingWindow.kt  TestFloatingWindowBinding.kt  ViewBindingInitializer.kt
app/src/main/java/com/sliver/samples/floatingwindow/core/: CustomFloatingWindow.kt  FloatingWindowMovableTouchHandler.kt  FloatingWindowParams.kt  FloatingWindowParamsBuilder.kt  FloatingWindowUtils.kt
app/src/main/java/com/sliver/samples/popup/: BasePopupWindow.kt  CustomPopupWindow.kt  PopupWindowLocator.kt
app/src/main/java/com/sliver/samples/popupwindow/: PopupWindowSampleActivity.kt  TestPopupWindow.kt
app/src/main/java/com/sliver/samples/popupwindow/adapter/: GravityAdapter.kt
app/src/main/java/com/sliver/samples/popupwindow/core/: BasePopupWindow.kt  CustomPopupWindow.kt  PopupWindowLocator.kt
app/src/main/java/com/sliver/samples/popupwindow/simple/: SimpleSeekBarChangeListener.kt
app/src/main/java/com/sliver/samples/screencapture/: ScreenCapturer.kt  TestScreenCaptureActivity.kt  TestScreenCaptureWindow.kt  TestScreenCaptureWindowBinding.kt
app/src/main/java/com/sliver/samples/viewpager/: ViewPager2Activity.kt  ViewPager2Adapter.kt  ViewPager2PageAdapter.kt  ViewPager2PageFragment.kt
app/src/main/res/layout/: activity_dialog_sample.xml  activity_floating_window_sample.xml  activity_main.xml  activity_popup_window_sample.xml  activity_test_screen_capture.xml  activity_view_pager2.xml  fragment_view_pager2_page.xml  item_friend_list.xml  popup_test.xml
app/src/test/java/com/sliver/androidsamples/: ExampleUnitTest.kt
app/src/test/java/com/sliver/samples/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
sample-di/: build.gradle.kts
sample-di-hilt/: build.gradle.kts
sample-di-hilt/src/androidTest/java/com/sliver/sample/di/hilt/: ExampleInstrumentedTest.kt
sample-di-hilt/src/main/: AndroidManifest.xml
sample-di-hilt/src/main/java/com/sliver/sample/di/hilt/: HiltModules.kt  MainActivity.kt
sample-di-hilt/src/main/res/layout/: activity_main.xml
sample-di-hilt/src/test/java/com/sliver/sample/di/hilt/: ExampleUnitTest.kt
sample-di/src/androidTest/java/com/sliver/sampledi/: ExampleInstrumentedTest.kt
sample-di/src/main/java/com/sliver/sampledi/: HiltModules.kt  MainActivity.kt
sample-di/src/main/java/com/sliver/sampledi/service/: BaiduApiService.kt
sample-di/src/main/res/values/: strings.xml
sample-di/src/test/java/com/sliver/sampledi/: ExampleUnitTest.kt
sample-nav-compose/: build.gradle.kts
sample-nav-compose/src/androidTest/java/com/sliver/sample/nav/compose/: ExampleInstrumentedTest.kt
sample-nav-compose/src/main/: AndroidManifest.xml
sample-nav-compose/src/main/java/com/sliver/sample/nav/compose/: MainActivity.kt
sample-nav-compose/src/main/res/values/: strings.xml  themes.xml
sample-nav-compose/src/test/java/com/sliver/sample/nav/compose/: ExampleUnitTest.kt
sample-preference/: build.gradle.kts
sample-preference/src/androidTest/java/com/sliver/sample/preference/: ExampleInstrumentedTest.kt
sample-preference/src/main/java/com/sliver/sample/preference/: MainActivity.kt  RecSettingsFragment.kt  SettingsFragment.kt
sample-preference/src/main/res/layout/: activity_main.xml
sample-preference/src/main/res/values/: arrays.xml  strings.xml
sample-preference/src/main/res/xml/: rec_settings_preferences.xml  root_preferences.xml
sample-preference/src/test/java/com/sliver/sample/preference/: ExampleUnitTest.kt
sample-route-navigation/: build.gradle.kts
sample-route-navigation/src/androidTest/java/com/sliver/sample/route/navigation/: ExampleInstrumentedTest.kt
sample-route-navigation/src/main/: AndroidManifest.xml
sample-route-navigation/src/main/java/com/sliver/sample/route/navigation/: MainActivity.kt  MainFragment.kt  NavArgsLog.kt  Routes.kt
sample-route-navigation/src/main/res/layout/: activity_main.xml  activity_profile.xml  activity_web_view.xml  fragment_home.xml  fragment_main.xml  fragment_mine.xml  fragment_settings.xml  fragment_star.xml
sample-route-navigation/src/main/res/menu/: menu_main.xml
sample-route-navigation/src/main/res/values/: strings.xml
sample-route-navigation/src/test/java/com/sliver/sample/route/navigation/: ExampleUnitTest.kt
(+21 files in other folders)
